--- a/fullstack/playbooks/ansible.cfg
+++ b/fullstack/playbooks/ansible.cfg
@@ -1,9 +1,10 @@
 [defaults]
 # Additional plugins
-lookup_plugins = /etc/ansible/plugins/lookup
-filter_plugins = /etc/ansible/plugins/filter
-action_plugins = /etc/ansible/plugins/action
-library = /etc/ansible/plugins/library
+action_plugins = /etc/ansible/roles/plugins/action
+callback_plugins = /etc/ansible/roles/plugins/callback
+filter_plugins = /etc/ansible/roles/plugins/filter
+lookup_plugins = /etc/ansible/roles/plugins/lookup
+library = /etc/ansible/roles/plugins/library
 
 # Fact caching
 gathering = smart
