--- a/fullstack/etc/openstack_deploy/user_fullstack_secrets.yml
+++ b/fullstack/etc/openstack_deploy/user_fullstack_secrets.yml
@@ -1,5 +1,13 @@
-## Designate Options
+## Designate secrets
 designate_galera_password:
 designate_pool_manager_galera_password:
 designate_rabbitmq_password:
 designate_service_password:
+
+
+## Trove secrets
+trove_galera_password:
+trove_rabbitmq_password:
+trove_service_password:
+trove_admin_user_password:
+trove_regular_user_password:
