--- a/fullstack/playbooks/ansible.cfg
+++ b/fullstack/playbooks/ansible.cfg
@@ -31,7 +31,7 @@ inventory = ../../openstack-ansible/playbooks/inventory/
 
 # Set the path to the folder in openstack-ansible which holds the roles
 # that are depended on by the rpc-openstack roles
-roles_path = ../../openstack-ansible/playbooks/roles/:/etc/ansible/roles/
+roles_path = ./roles:../../openstack-ansible/playbooks/roles/:/etc/ansible/roles/
 
 [ssh_connection]
 pipelining = True
